feat: 更新分模块打包;

--- a/script/router.config.template.ejs
+++ b/script/router.config.template.ejs
@@ -7,7 +7,7 @@ import <%=item %> from '<%=deelRouteName(item) %>';
 let routesConfig: Array<RouteConfig> = [];
   routesConfig = [
     <% chooseModules.forEach(function(item){%>
-      <%=item %>,
+      ...<%=item %>,
     <% }) %>
   ]
 
